# langchain-playground

./: pyproject.toml  requirements.txt
Basic/: basic_deep_dive.ipynb  openai_oss.ipynb
agent/: agent.ipynb  react_agent.ipynb
pinecone/: advanced_pinecone_langchain.ipynb  pinecone_langchain.ipynb
pinecone/chroma_db/: chroma.sqlite3
