[project]
name = "langchain-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "duckduckgo-search>=8.0.4",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.4",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langchain-pinecone>=0.2.8",
    "langchainhub>=0.1.21",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "wikipedia>=1.4.0",
]
